fix: hover on sow enlarge on mobile fix

--- a/styles/styles.css
+++ b/styles/styles.css
@@ -332,6 +332,8 @@ footer a:hover {
   .shows_6 img:hover,
   .shows_7 img:hover,
   .shows_8 img:hover {
+    width: 200px;
+    height: 120px;
     border: 2px solid white;
     transition: border 0.8s;
   }
